CMSC-212 Fix a bug in css that makes the select (like checkbox) too wide.
git-svn-id: https://scm.mmbase.org/mmbase/trunk@26628 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/CMSContainer_Demo/demo.cmscontainer.org/war/src/webapp/css/stijl.css
+++ b/contributions/CMSContainer_Demo/demo.cmscontainer.org/war/src/webapp/css/stijl.css
@@ -466,6 +466,13 @@ a img
   width: 190px;
 }
 
+#form input,
+#form textarea
+{
+  width: 190px;
+}
+
+
 #form select
 {
   width: 192px;
